k8s-config/namespace/localdevelopment/greet-app/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: localdevelopment
  labels:
    istio-injection: enabled
